--- a/public/stylesheets/mangle.less
+++ b/public/stylesheets/mangle.less
@@ -24,36 +24,38 @@ p {
     width: 600px;
 }
 
-.transient div.left {
+.transient {
+  div.left {
     float: left;
     width: 230px;
-}
+  }
 
-.transient div.right {
+  div.right {
     float: left;
     margin-left: 20px;
     width: 200px;
-}
+  }
 
-.transient fieldset {
+  fieldset {
     margin-top: 30px;
-}
+  }
 
-.transient hr {
+  hr {
     display: block;
     position: relative;
     left: -10px;
     margin-bottom: 0px;
-}
+  }
 
-.transient input {
+  input {
     display: inline-block;
     margin-bottom: -10px;
     margin-left: 10px;
-}
+  }
 
-.transient label {
+  label {
     display: inline-block;
     position: relative;
     top: 10px;
+  }
 }
