Added namespace example

--- a/public/stylesheets/mangle.less
+++ b/public/stylesheets/mangle.less
@@ -24,6 +24,29 @@ p {
     width: 600px;
 }
 
+.namespace {
+  code {
+    margin-left: 10px;
+  }
+
+  label {
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 8px;
+  }
+
+  table {
+    float: left;
+    margin-right: 20px;
+    margin-top: 20px;
+    width: 130px;
+  }
+
+  .inject-example {
+    clear: both;
+  }
+}
+
 .transient {
   div.left {
     float: left;
